// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns: should render columns 1`] = `
<div
  className="Columns__columns"
>
  <div
    className="Columns__column"
    key="0"
  >
    <div />
  </div>
  <div
    className="Columns__column"
    key="1"
  >
    <div />
  </div>
</div>
`;

exports[`Columns: should render columns in reverse 1`] = `
<div
  className="Columns__columns Columns__columns_reverse"
>
  <div
    className="Columns__column"
    key="0"
  >
    <div
      id="1"
    />
  </div>
  <div
    className="Columns__column"
    key="1"
  >
    <div
      id="2"
    />
  </div>
</div>
`;

exports[`Columns: should render flexible columns 1`] = `
<div
  className="Columns__columns Columns__columns_flexible"
>
  <div
    className="Columns__column"
    key="0"
  >
    <div />
  </div>
  <div
    className="Columns__column"
    key="1"
  >
    <div />
  </div>
</div>
`;

exports[`Columns: should render tight columns 1`] = `
<div
  className="Columns__columns Columns__columns_tight"
>
  <div
    className="Columns__column"
    key="0"
  >
    <div />
  </div>
  <div
    className="Columns__column"
    key="1"
  >
    <div />
  </div>
</div>
`;
